--- a/Fabric/tasks/wide_dpram1k/config/task.conf
+++ b/Fabric/tasks/wide_dpram1k/config/task.conf
@@ -17,8 +17,10 @@ fpga_flow=yosys_vpr
 
 [OpenFPGA_SHELL]
 openfpga_shell_template=${PATH:OPENFPGA_PATH}/openfpga_flow/openfpga_shell_scripts/fix_heterogeneous_device_example_script.openfpga
+#openfpga_shell_template=${PATH:OPENFPGA_PATH}/openfpga_flow/openfpga_shell_scripts/generate_fabric.openfpga
 #openfpga_arch_file=${PATH:OPENFPGA_PATH}/openfpga_flow/openfpga_arch/k6_frac_N10_adder_chain_mem1K_40nm_openfpga.xml
-openfpga_arch_file=${PATH:TASK_DIR}/arch/k6_frac_N10_adder_chain_mem1K_40nm_openfpga.xml
+#openfpga_arch_file=${PATH:TASK_DIR}/arch/k6_frac_N10_adder_chain_mem1K_40nm_openfpga.xml
+openfpga_arch_file=${PATH:TASK_DIR}/arch/k6_frac_N10_adder_chain_mem1K_sky130_openfpga.xml
 openfpga_sim_setting_file=${PATH:OPENFPGA_PATH}/openfpga_flow/openfpga_simulation_settings/fixed_sim_openfpga.xml
 # VPR parameter
 #openfpga_vpr_device_layout=4x2
@@ -29,7 +31,9 @@ openfpga_vpr_device_layout=auto
 arch0=${PATH:TASK_DIR}/arch/k6_frac_N10_tileable_adder_chain_wide_mem1K_40nm.xml
 
 [BENCHMARKS]
-bench0=${PATH:OPENFPGA_PATH}/openfpga_flow/benchmarks/micro_benchmark/dual_port_ram_1k/dual_port_ram_1k.v
+#bench0=${PATH:OPENFPGA_PATH}/openfpga_flow/benchmarks/micro_benchmark/dual_port_ram_1k/dual_port_ram_1k.v
+#bench1=${PATH:OPENFPGA_PATH}/openfpga_flow/benchmarks/micro_benchmark/and4/and4.v
+bench2=${PATH:OPENFPGA_PATH}/openfpga_flow/benchmarks/micro_benchmark/and2_or2/and2_or2.v
 
 [SYNTHESIS_PARAM]
 # Yosys script parameters
@@ -39,7 +43,9 @@ bench_yosys_bram_map_verilog_common=${PATH:OPENFPGA_PATH}/openfpga_flow/openfpga
 bench_read_verilog_options_common = -nolatches
 bench_yosys_common=${PATH:OPENFPGA_PATH}/openfpga_flow/misc/ys_tmpl_yosys_vpr_bram_flow.ys
 bench_yosys_rewrite_common=${PATH:OPENFPGA_PATH}/openfpga_flow/misc/ys_tmpl_yosys_vpr_flow_with_rewrite.ys;${PATH:OPENFPGA_PATH}/openfpga_flow/misc/ys_tmpl_rewrite_flow.ys
-bench0_top = dual_port_ram_1k
+#bench0_top = dual_port_ram_1k
+#bench1_top = and4
+bench2_top = and2_or2
 
 [SCRIPT_PARAM_MIN_ROUTE_CHAN_WIDTH]
 end_flow_with_test=
